--- a/index.html
+++ b/index.html
@@ -152,7 +152,11 @@
                                 rich and high-quality data.
                             </p>
                             <p class="text-center">
-                                <a href="" class="btn btn-action">Read more</a>
+                                <a
+                                    href="https://prg.cs.umd.edu/WorldGen"
+                                    class="btn btn-action"
+                                    >Read more</a
+                                >
                             </p>
                         </div>
                         <div class="col-sm-6 col-md-3">
@@ -186,7 +190,7 @@
                 <!-- / section -->
 
                 <div class="row section recentworks topspace">
-                    <h2 class="section-title"><span>Recent Works</span></h2>
+                    <h2 class="section-title"><span>Projects</span></h2>
 
                     <div class="thumbnails recentworks row">
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -200,12 +204,51 @@
                                     >
                                 </span>
                                 <span class="title"
-                                    >Sample title - big data solutions</span
+                                    >Multi-Client Chat Server</span
                                 >
                             </a>
                             <span class="details"
+                                ><a href="">C</a> | <a href="">TCP</a> |
+                                <a href="">Reverse Engineering</a></span
+                            >
+                            <h4></h4>
+                            <p></p>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                            <a class="thumbnail" href="sidebar-right.html">
+                                <span class="img">
+                                    <img src="assets/images/s1.jpg" alt="" />
+                                    <span class="cover"
+                                        ><span class="more"
+                                            >See details &rarr;</span
+                                        ></span
+                                    >
+                                </span>
+                                <span class="title">EazyLabel</span>
+                            </a>
+                            <span class="details"
                                 ><a href="">Web design</a> |
-                                <a href="">Wordpress</a> |
+                                <a href="">Wordpress</a></span
+                            >
+                            <h4></h4>
+                            <p></p>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                            <a class="thumbnail" href="sidebar-right.html">
+                                <span class="img">
+                                    <img src="assets/images/s1.jpg" alt="" />
+                                    <span class="cover"
+                                        ><span class="more"
+                                            >See details &rarr;</span
+                                        ></span
+                                    >
+                                </span>
+                                <span class="title">MedBots</span>
+                            </a>
+                            <span class="details"
+                                ><a href="">Web design</a> |
                                 <a href="">Logotype</a></span
                             >
                             <h4></h4>
@@ -223,8 +266,8 @@
                                     >
                                 </span>
                                 <span class="title"
-                                    >Pure ipsum - development services for
-                                    people</span
+                                    >Kerbal Space Mun Landing - Reinforcement
+                                    Learning</span
                                 >
                             </a>
                             <span class="details"
@@ -246,8 +289,7 @@
                                     >
                                 </span>
                                 <span class="title"
-                                    >Lorem studios - interior and patio
-                                    design</span
+                                    >Model Rocket - G Motor</span
                                 >
                             </a>
                             <span class="details"
@@ -268,33 +310,7 @@
                                         ></span
                                     >
                                 </span>
-                                <span class="title"
-                                    >Pure ipsum - development services for
-                                    people</span
-                                >
-                            </a>
-                            <span class="details"
-                                ><a href="">Web design</a> |
-                                <a href="">Wordpress</a></span
-                            >
-                            <h4></h4>
-                            <p></p>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                            <a class="thumbnail" href="sidebar-right.html">
-                                <span class="img">
-                                    <img src="assets/images/s1.jpg" alt="" />
-                                    <span class="cover"
-                                        ><span class="more"
-                                            >See details &rarr;</span
-                                        ></span
-                                    >
-                                </span>
-                                <span class="title"
-                                    >Lorem studios - interior and patio
-                                    design</span
-                                >
+                                <span class="title">Bittorent Client</span>
                             </a>
                             <span class="details"
                                 ><a href="">Web design</a> |
@@ -315,8 +331,28 @@
                                     >
                                 </span>
                                 <span class="title"
-                                    >Lorem studios - interior and patio
-                                    design</span
+                                    >Robot Navigation using April Tags</span
+                                >
+                            </a>
+                            <span class="details"
+                                ><a href=""></a> | <a href="">Logotype</a></span
+                            >
+                            <h4></h4>
+                            <p></p>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                            <a class="thumbnail" href="sidebar-right.html">
+                                <span class="img">
+                                    <img src="assets/images/s1.jpg" alt="" />
+                                    <span class="cover"
+                                        ><span class="more"
+                                            >See details &rarr;</span
+                                        ></span
+                                    >
+                                </span>
+                                <span class="title"
+                                    >Quantum Reinforcement Learning</span
                                 >
                             </a>
                             <span class="details"
