--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <header id="header">
             <div id="head" class="parallax" parallax-speed="2">
                 <h1 id="logo" class="text-center">
-                    <img
+                    <!-- <img
                         class="img-circle"
                         src="assets/images/guy.jpg"
                         alt=""
-                    />
+                    /> -->
                     <span class="title">Riya Kumari</span>
                     <!-- <span class="tagline">A mystery person<br>
 				<a href="">anthony.russel42@example.com</a></span> -->
