added a few links

--- a/index.html
+++ b/index.html
@@ -312,24 +312,23 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                            <a class="thumbnail" href="sidebar-right.html">
+                            <a class="thumbnail" href="https://devpost.com/software/easy-label">
                                 <span class="img">
                                     <img src="assets/images/s1.jpg" alt="" />
-                                    <span class="cover"
-                                        ><span class="more"
-                                            >See details &rarr;</span
-                                        ></span
-                                    >
+                                    <span class="cover">
+                                        <span class="more">See details &rarr;</span>
+                                    </span>
                                 </span>
                                 <span class="title">EazyLabel</span>
                             </a>
-                            <span class="details"
-                                ><a href="">Android Studio | Java | Mobile App</a> |
-
+                            <span class="details">
+                                <a href="https://github.com/riya-kumari/EasyLabel">Github</a> |
+                                <a href="https://github.com/riya-kumari/EasyLabel">Android Studio | Java | Mobile App</a> |
+                            </span>
                             <h4></h4>
                             <p></p>
                         </div>
-
+                        
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                             <a class="thumbnail" href="sidebar-right.html">
                                 <span class="img">
@@ -340,7 +339,7 @@
                                         ></span
                                     >
                                 </span>
-                                <span class="title">Bittorent Client</span>
+                                <span class="title">Bittorent Client ~</span>
                             </a>
                             <span class="details"
                                 >C++ | Multi-threading</span
@@ -369,26 +368,22 @@
                         </div>
 
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                            <a class="thumbnail" href="sidebar-right.html">
+                            <a class="thumbnail" href="https://github.com/alexjbusch/Kerbal-Reinforcement-Program/tree/actor-critic-experiments">
                                 <span class="img">
                                     <img src="assets/images/s1.jpg" alt="" />
-                                    <span class="cover"
-                                        ><span class="more"
-                                            >See details &rarr;</span
-                                        ></span
-                                    >
+                                    <span class="cover">
+                                        <span class="more">See details &rarr;</span>
+                                    </span>
                                 </span>
-                                <span class="title"
-                                    >Kerbal Space Mun Landing - Reinforcement
-                                    Learning</span
-                                >
+                                <span class="title">Kerbal Space Mun Landing - Reinforcement Learning</span>
                             </a>
-                            <span class="details"
-                                >Pytorch | Kerbal Space Program Game</span
-                            >
+                            <span class="details">
+                                <a href="https://github.com/alexjbusch/Kerbal-Reinforcement-Program/tree/actor-critic-experiments">Pytorch | Kerbal Space Program Game</a>
+                            </span>
                             <h4></h4>
                             <p></p>
                         </div>
+                        
 
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                             <a class="thumbnail" href="sidebar-right.html">
@@ -427,6 +422,48 @@
                             </a>
                             <span class="details"
                                 ><a href=""></a> | <a href="">Logotype</a></span
+                            >
+                            <h4></h4>
+                            <p></p>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                            <a class="thumbnail" href="sidebar-right.html">
+                                <span class="img">
+                                    <img src="assets/images/s1.jpg" alt="" />
+                                    <span class="cover"
+                                        ><span class="more"
+                                            >See details &rarr;</span
+                                        ></span
+                                    >
+                                </span>
+                                <span class="title"
+                                    >Robot Line Follower</span
+                                >
+                            </a>
+                            <span class="details"
+                                ><a href=""></a> | <a href="">Embedded C</a></span
+                            >
+                            <h4></h4>
+                            <p></p>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                            <a class="thumbnail" href="sidebar-right.html">
+                                <span class="img">
+                                    <img src="assets/images/s1.jpg" alt="" />
+                                    <span class="cover"
+                                        ><span class="more"
+                                            >See details &rarr;</span
+                                        ></span
+                                    >
+                                </span>
+                                <span class="title"
+                                    >Self-Balancing Robot</span
+                                >
+                            </a>
+                            <span class="details"
+                                ><a href=""></a> | <a href="">C/C++</a></span
                             >
                             <h4></h4>
                             <p></p>
