--- a/index.html
+++ b/index.html
@@ -50,14 +50,6 @@
 
         <main id="main">
             <div class="container">
-                <!-- <div class="row section topspace">
-                    <div class="col-md-12">
-                        <p class="lead text-center text-muted">
-                            Hello, I work at MIT Lincoln Labs as part of the
-                            Humanitarian Assistance and Disaster Response Group.
-                        </p>
-                    </div>
-                </div> -->
 
                 <!-- / section -->
 
@@ -128,140 +120,66 @@
                         <span>Professional Experience</span>
                     </h2>
                     <div class="row">
-                        <div class="col-sm-6 col-md-3">
-                            <div style="text-align: center">
-                                <img
-                                    src="assets/images/mitll.png"
-                                    alt="UMD Image"
-                                    class="img-fluid"
-                                    style="
-                                        max-width: 100%;
-                                        width: 25%;
-                                        border-radius: 1px;
-                                    "
-                                />
-                            </div>
-
-                            <h3
-                                style="
-                                    margin-bottom: 20px;
-                                    font-size: 22px;
-                                    text-align: center;
-                                "
-                            >
-                                MIT Lincoln Labs
-                            </h3>
-
-                            <h4 style="font-size: 18px">
-                                Humanitarian Assistance & Disaster Response Team
-                            </h4>
-                            <p>Currently employed</p>
-                            <!-- <p class="text-center">
-                                <a href="" class="btn btn-action">Read more</a>
-                            </p> -->
-                        </div>
-                        <div class="col-sm-6 col-md-3">
+                        <div class="col-sm-6 col-md-4">
                             <div style="text-align: center">
                                 <img
                                     src="assets/images/ri.png"
                                     alt="riss image"
                                     class="img-fluid"
-                                    style="
-                                        max-width: 100%;
-                                        width: 25%;
-                                        border-radius: 1px;
-                                    "
+                                    style="max-width: 100%; width:20%; border-radius: 1px;"
                                 />
                             </div>
-                            <h3
-                                style="
-                                    margin-bottom: 20px;
-                                    font-size: 22px;
-                                    text-align: center;
-                                "
-                            >
+                            <h3 style="margin-bottom: 20px; font-size: 22px; text-align: center;">
                                 Carnegie Mellon Robotics Institute
                             </h3>
-                            <h4 style="font-size: 18px">
+                            <h4 style="font-size: 18px; text-align: center;">
                                 Summer Research Intern
                             </h4>
-                            <p>
-                                Worked in the AirLab on the problem of depth
-                                completion by combining Lidar and Camera sensors
-                                using a deep-learning approach.
+                            <p style="text-align: center;">
+                                Worked in the AirLab on the problem of depth completion by combining Lidar and Camera sensors using a deep-learning approach.
                             </p>
-                            <!-- <p class="text-center">
-                                <a href="" class="btn btn-action">Read more</a>
-                            </p> -->
                         </div>
-                        <div class="col-sm-6 col-md-3">
+                        <div class="col-sm-6 col-md-4">
                             <div style="text-align: center">
                                 <img
                                     src="assets/images/aero_corp.png"
                                     alt="UMD Image"
                                     class="img-fluid"
-                                    style="
-                                        max-width: 100%;
-                                        width: 25%;
-                                        border-radius: 1px;
-                                    "
+                                    style="max-width: 100%; width: 20%; border-radius: 1px;"
                                 />
                             </div>
-                            <h3
-                                style="
-                                    margin-bottom: 20px;
-                                    font-size: 22px;
-                                    text-align: center;
-                                "
-                            >
+                            <h3 style="margin-bottom: 20px; font-size: 22px; text-align: center;">
                                 Aerospace Corporation
                             </h3>
-                            <h4 style="font-size: 18px">
+                            <h4 style="font-size: 18px; text-align: center;">
                                 Control Analysis & Robotics Intern
                             </h4>
-                            <p>
-                                Wrote control(kinematics) software for a 7-DOF
-                                robotic arm. Automated a photogrammetry
-                                pipeline. And headed the Attitude,
-                                Determination, and Control subteam in a space
-                                concept design for wildfire detection on the
-                                west coast of the US.
+                            <p style="text-align: center;">
+                                Wrote control(kinematics) software for a 7-DOF robotic arm. Automated a photogrammetry pipeline. And headed the Attitude, Determination, and Control subteam in a space concept design for wildfire detection on the west coast of the US.
                             </p>
                         </div>
-                        <div class="col-sm-6 col-md-3">
+                        <div class="col-sm-6 col-md-4">
                             <div style="text-align: center">
                                 <img
                                     src="assets/images/google.png"
                                     alt="google Image"
                                     class="img-fluid"
-                                    style="
-                                        max-width: 100%;
-                                        width: 25%;
-                                        border-radius: 1px;
-                                    "
+                                    style="max-width: 100%; width: 20%; border-radius: 1px;"
                                 />
                             </div>
-                            <h3
-                                style="
-                                    margin-bottom: 20px;
-                                    font-size: 22px;
-                                    text-align: center;
-                                "
-                            >
+                            <h3 style="margin-bottom: 20px; font-size: 22px; text-align: center;">
                                 Google
                             </h3>
-                            <h4 style="font-size: 18px">
-                                STEP (Student Training in Engineering Program)
-                                Intern
+                            <h4 style="font-size: 18px; text-align: center;">
+                                STEP (Student Training in Engineering Program) Intern
                             </h4>
-                            <p>
-                                Worked in the Google Cloud Shell team as a
-                                backend developer to revamp the file transfer
-                                feature.
+                            <p style="text-align: center;">
+                                Worked in the Google Cloud Shell team as a backend developer to revamp the file transfer feature.
                             </p>
                         </div>
                     </div>
                 </div>
+                
                 <!-- / section -->
 
                 <div class="row section recentworks topspace">
@@ -271,7 +189,12 @@
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                             <a class="thumbnail" href="sidebar-right.html">
                                 <span class="img">
-                                    <img src="assets/images/s1.jpg" alt="" />
+                                    <img
+                                    src="assets/images/chord_dist.png"
+                                    alt="google Image"
+                                    class="img-fluid"
+                                    style="max-width: 100%; width: 20%; border-radius: 1px;"
+                                />
                                     <span class="cover"
                                         ><span class="more"
                                             >See details &rarr;</span
